--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
               <nav class="menu-flotante">
                 <button class="boton-flotante">Menú</button>
                 <ul class="menu-desplegable">
-                  <li><a href="preparatoria/Preparatoria.html">preparatoria</a></li>
-                  <li><a href="licenciatura/Licenciatura.html">licenciatura</a></li>
-                  <li><a href="quienes somos/Quienes somos.html">Acerca de</a></li>
+                  <li><a href="Preparatoria.html">preparatoria</a></li>
+                  <li><a href="Licenciatura.html">licenciatura</a></li>
+                  <li><a href="Quienes somos.html">Acerca de</a></li>
                 </ul>
               </nav>
             </div>
-            <img id="foto-celular-cuadro" src="imagenes/baner-home2.jpeg" alt="presentacion">
+            <img id="foto-celular-cuadro" src="baner-home2.jpeg" alt="presentacion">
           </div>
           <div id="contactos">
             <div class="caja-contactos">
               <a class="text">
-                  <img id="WhatsApp" src="imagenes/WhatsApp.svg.webp" alt="whatsapp" >
+                  <img id="WhatsApp" src="WhatsApp.svg.webp" alt="whatsapp" >
                 +52 999 112 9572
               </a>
             </div>
             <div class="caja-contactos">
               <a class="text" >
-                <img id="phonecall" src="imagenes/phonecall.png" alt="Telefonico">
+                <img id="phonecall" src="phonecall.png" alt="Telefonico">
                 +52 999 923 1167
               </a>
             </div>
             <div class="caja-contactos" id="caja-gmail">
               <a class="text" href="mailto:itecosescuela@gmail.com">
-                  <img id="Correo" src="imagenes/gmail.webp" alt="Correo">
+                  <img id="Correo" src="gmail.webp" alt="Correo">
                 itecosescuela@gmail.com 
               </a>
             </div> 
@@ -50,11 +50,11 @@
         <div id="ordenador"> <!--enlaces rapidos-->
           <p class=" accesos">
             <a class="color">
-              <img id="LogoHome" src="imagenes/Logo2.PNG" alt="Pagina Principal"> </a>
+              <img id="LogoHome" src="Logo2.PNG" alt="Pagina Principal"> </a>
               <a class="color" href="index.html">Inicio</a>
-              <a class="color" href="preparatoria/preparatoria.html">Preparatoria</a>
-              <a class="color" href="licenciatura/licenciatura.html">Administracion de empresas</a>
-              <a class="color" id="nosotros" href="quienes somos/Quienes Somos.html">¿Quienes somos?</a>
+              <a class="color" href="preparatoria.html">Preparatoria</a>
+              <a class="color" href="licenciatura.html">Administracion de empresas</a>
+              <a class="color" id="nosotros" href="Quienes Somos.html">¿Quienes somos?</a>
           </p>
         </div>
       </header>
@@ -81,8 +81,8 @@
           <h2 id="sinsens">
             Nuestros niveles educativos
           </h2><br><br>
-              <a href="licenciatura/licenciatura.html"><img id="licenciaturalogo" src="imagenes/licenciatura-logo.jpeg" alt="Pagina Licenciatura"></a>
-            <a href="preparatoria/preparatoria.html"><img id="preparatorialogo" src="imagenes/prepa-logo.jpeg" alt="Pagina Preparatoria"></a>
+              <a href="licenciatura.html"><img id="licenciaturalogo" src="licenciatura-logo.jpeg" alt="Pagina Licenciatura"></a>
+            <a href="preparatoria.html"><img id="preparatorialogo" src="prepa-logo.jpeg" alt="Pagina Preparatoria"></a>
             <div id="titulo-niveles">
               <p id="imp">licenciatura</p>
               <p>preparatoria</p>
@@ -90,7 +90,7 @@
         </div>
         <div id="formulario" > <!--formulario-->
           <div id="contenedor-imagen">
-            <img src="imagenes/opcion1.jpeg" alt="Imagen" id="imagen">
+            <img src="opcion1.jpeg" alt="Imagen" id="imagen">
           </div>
           <div id="contenedor-formulario">
             <form id="formm">
@@ -131,16 +131,16 @@
             </h2>
           </div>
           <div class="cinta-imagenes">
-            <img src="imagenes/Logo2.PNG" alt="Imagen 1">
-            <img src="imagenes/Logo2.PNG" alt="Imagen 2">
-            <img src="imagenes/Logo2.PNG" alt="Imagen 4">
-            <img src="imagenes/Logo2.PNG" alt="Imagen 5">
-            <img src="imagenes/Logo2.PNG" alt="Imagen 6">
-            <img src="imagenes/Logo2.PNG" alt="Imagen 7">
-            <img src="imagenes/Logo2.PNG" alt="Imagen 8">
-            <img src="imagenes/Logo2.PNG" alt="Imagen 9">
-            <img src="imagenes/Logo2.PNG" alt="Imagen 10">
-            <img src="imagenes/Logo2.PNG" alt="Imagen 11">
+            <img src="Logo2.PNG" alt="Imagen 1">
+            <img src="Logo2.PNG" alt="Imagen 2">
+            <img src="Logo2.PNG" alt="Imagen 4">
+            <img src="Logo2.PNG" alt="Imagen 5">
+            <img src="Logo2.PNG" alt="Imagen 6">
+            <img src="Logo2.PNG" alt="Imagen 7">
+            <img src="Logo2.PNG" alt="Imagen 8">
+            <img src="Logo2.PNG" alt="Imagen 9">
+            <img src="Logo2.PNG" alt="Imagen 10">
+            <img src="Logo2.PNG" alt="Imagen 11">
           </div>
         </div>
       </div>
@@ -153,11 +153,11 @@
                   <h2 class="Contenio">
                       niveles academicos
                   </h2><br>
-                  <a class="contenio" id="separador" href="preparatoria/preparatoria.html">Preparatoria</a> <br><br>
-                  <a class="contenio" href="licenciatura/licenciatura.html">licenciatura</a>
+                  <a class="contenio" id="separador" href="preparatoria.html">Preparatoria</a> <br><br>
+                  <a class="contenio" href="licenciatura.html">licenciatura</a>
               </div>
               <div id="f2">
-                <a href="quienes somos/Quienes Somos.html">Mas sobre nosotros<br> y<br> nuestros valores</a>
+                <a href="Quienes Somos.html">Mas sobre nosotros<br> y<br> nuestros valores</a>
               </div>
               <div id="f3">
                   <h2 class="Contenio">
@@ -176,11 +176,11 @@
             </div>
             <div class="fft">
               <a href="https://m.facebook.com/EscuelaSuperiorItecos/">
-                <img id="fblogo" src="imagenes/FBlogo.png" alt="foto FB">
+                <img id="fblogo" src="FBlogo.png" alt="foto FB">
                 Nuestro Facebook
               </a>
               <a href="https://www.instagram.com/itecosescuela?igsh=MW55MHNzYXZlejRndw==">
-                <img  id="iglogo" src="imagenes/Ig logo.png" alt="foto IG">
+                <img  id="iglogo" src="Ig logo.png" alt="foto IG">
                 Nuestro Instagram
               </a>
             </div>
